force-app/main/default/objects/Date_Shift_Event__e/fields/Error_List__c.field-meta.xml
<CustomField>
    <fullName>Error_List__c</fullName>
    <description>A JSON-formatted string containing a list of error objects describing the errors that occurred in this batch.</description>
    <label>Error List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>