force-app/main/default/objects/Date_Shift_Event__e/fields/Finished__c.field-meta.xml
<CustomField>
    <fullName>Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the date shifting for this Date Shift Object is finished, false otherwise.</description>
    <label>Finished</label>
    <type>Checkbox</type>
</CustomField>