force-app/main/default/objects/Date_Shift_Event__e/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>The API name of the object being processed.</description>
    <label>SObject API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>